--- a/Task_1_1_1/build.gradle
+++ b/Task_1_1_1/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'jacoco'
     id 'java'
 }
 
@@ -16,4 +17,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
 }
