--- a/.github/workflows/oop.yml
+++ b/.github/workflows/oop.yml
@@ -19,6 +19,9 @@ jobs:
       
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
+      - name: Set permissions for gradle script
+        run: chmod +x ./gradlew
     
       - name: Execute Gradle build
         run: ./gradlew build
