--- a/Task_1_5_2/build.gradle
+++ b/Task_1_5_2/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
 }
 
 test {
