--- a/Task_1_5_2/build.gradle
+++ b/Task_1_5_2/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'
 }
 
 test {
