--- a/Task_2_1_1/build.gradle
+++ b/Task_2_1_1/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id "me.champeau.jmh" version "0.6.8"
 }
 
 group 'org.example'
@@ -13,6 +14,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.openjdk.jmh:jmh-core:1.36'
+    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
 }
 
 test {
