--- a/Task_2_2_1/build.gradle
+++ b/Task_2_2_1/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.36'
+
+
 }
 
 test {
