Split project into packages, add main application starter

--- a/Task_2_2_1/build.gradle
+++ b/Task_2_2_1/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'application'
 }
 
 group 'org.example'
@@ -18,8 +19,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'org.slf4j:slf4j-log4j12:1.7.36'
+}
 
-
+application{
+    mainClass = 'ru.nsu.amazyar.Main'
 }
 
 test {
